// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge should render danger Badge 1`] = `
<div
  className="my-2 rounded-full w-fit px-4 py-1 text-[10pt] font-semibold bg-[#f17573] text-white undefined"
>
  Danger
</div>
`;

exports[`Badge should render info Badge 1`] = `
<div
  className="my-2 rounded-full w-fit px-4 py-1 text-[10pt] font-semibold bg-[#48b0f7] text-white undefined"
>
  Info
</div>
`;

exports[`Badge should render success Badge 1`] = `
<div
  className="my-2 rounded-full w-fit px-4 py-1 text-[10pt] font-semibold bg-[#10cfbd] text-white undefined"
>
  Success
</div>
`;

exports[`Badge should render warning Badge 1`] = `
<div
  className="my-2 rounded-full w-fit px-4 py-1 text-[10pt] font-semibold bg-[#f8d053] text-white undefined"
>
  Warning
</div>
`;
